labs/old-2018-lab1/testsuite/bad/bad029.cc
int foo(int x, y int) {
	return x;
}
